// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /campaigns/:id/statistics Campaigns_200_NoInternship 1`] = `
Object {
  "campaign": 1,
  "internships": Object {
    "attributed": 0,
    "availables": 0,
    "total": 0,
  },
  "mentors": 0,
  "propositions": 0,
  "students": 0,
}
`;

exports[`GET /statistics Default 200 Statistics 1`] = `
Object {
  "internships": Object {
    "abroad": 0,
    "archived": 0,
    "attributed_mentor": 0,
    "attributed_student": 0,
    "available_campaign": 0,
    "published": 0,
    "running": 0,
    "total": 0,
    "validation": 0,
    "waiting": 0,
  },
  "mentors": 0,
  "propositions": 0,
  "students": 0,
}
`;
